# AwesomeCure

./: .gitignore  .~lock.sustainbeat.csv#  OpenSustain_topic_modeling.ipynb  README.md  Untitled.ipynb  awesome.md  awesomecure.ipynb  ecosystems_to_grist.py  ost_analysis.ipynb  pyproject.toml  read_ecosystem_json.ipynb  requirements.txt  setup.py  sustainbeat.csv  sustainbeat.ipynb  topics.ipynb  update_grist_organizations.py  update_grist_projects.py
csv/: GitHub.csv  custom_platform_projects.csv  github_organisations.csv  github_organizations.csv  github_projects.csv  gitlab_projects.csv  organizations_labeled.csv  project_analysis.csv  projects.csv
docs/: OST_Analysis.excalidraw
src/open_sustain_tech/: .gitignore  README.md  __init__.py  __main__.py  application_plugin.py  config.py  many_configs.yaml
src/open_sustain_tech/csv/: github_organizations.csv  github_organizations_back.csv  project_analysis.csv  projects.csv
src/open_sustain_tech/docs/: AwesomeCure.excalidraw
sustainbeat/: awesome2py.py
