[tool.poetry]
name = "open-sustain-tech"
version = "0.5.1"
description = "Awesome List Curated"
authors = ["Abderrahim Guennoune <aguennoune@outlook.com>"]
readme = "README.md"
packages = [{include = "open_sustain_tech", from = "src"}]

[tool.poetry.scripts]
oss-opt = "open_sustain_tech.main:app"

[tool.poetry.dependencies]
python = ">=3.8, <3.9 || >=3.9, <3.12"
poetry = "^1.7.0"
numpy = ">=1.24"
plotly = "^5.18.0"
pandas = ">=1.3.0,<2.0.0"
dateparser = "^1.1.8"
pycountry = "^22.3.5"
pygithub = "^2.1.1"
requests = "^2.31.0"
bs4 = "^0.0.1"
termcolor = "^2.3.0"
markdown = "^3.5"
python-dotenv = "^1.0.0"
pyyaml = "^6.0.1"
handcalcs = "^1.6.5"
typer = "^0.9.0"
click = "^8.1.7"
kaleido = "0.2.1"
pycaret = "^3.0.0"
cleo = "^2.1.0"
importlib-metadata = "^6.8.0"
rich = "^13.6.0"
poetry-core = "^1.8.1"
typer-common-functions = "^0.0.7"

[tool.poetry.urls]
"Awesome Cure" = "https://github.com/protontypes/AwesomeCure/issues"

[tool.poetry.plugins."poetry.application.plugin"]
oss-opt = "open_sustain_tech:OSSOptionPlugin"


[[tool.poetry.source]]
name = "url"
url = "https://github.com/protontypes/open-sustainable-technology"
priority = "primary"


[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
