[tool.poetry]
name = "open-sustain-tech"
version = "1.3.0"
description = "Awesome List Curated with a Poetry Plugin Support to the Open Sustain Tech CLI Option"
authors = ["Abderrahim Guennoune <aguennoune@outlook.com>"]
license = "MIT"
homepage = "https://opensustain.tech/"
repository = "https://github.com/aguennoune/AwesomeCure/tree/main"
keywords = ["awesome-list", "poetry", "plugin", "python", "version", "sustainability", "technology", "open", "source", "software"]
readme = "README.md"
packages = [{include = "open_sustain_tech", from = "src"}]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]

[tool.poetry.scripts]
oss-opt = "open_sustain_tech.main:app"

[tool.poetry.dependencies]
python = ">=3.8, <3.9 || >=3.9, <3.12"
poetry = "^1.7.0"
numpy = ">=1.24"
plotly = "^5.18.0"
pandas = ">=1.3.0,<2.0.0"
dateparser = "^1.1.8"
pycountry = "^22.3.5"
pygithub = "^2.1.1"
requests = "^2.31.0"
bs4 = "^0.0.1"
termcolor = "^2.3.0"
markdown = "^3.5"
python-dotenv = "^1.0.0"
pyyaml = "^6.0.1"
handcalcs = "^1.6.5"
typer = "^0.9.0"
click = "^8.1.7"
kaleido = "0.2.1"
pycaret = "^3.0.0"
cleo = "^2.1.0"
importlib-metadata = "^6.8.0"
rich = "^13.6.0"
poetry-core = "^1.8.1"
typer-common-functions = "^0.0.7"
simple-parsing = "^0.1.4"

[tool.poetry.extras]
plugin = ["poetry"]

[tool.poetry.group.dev.dependencies]
pre-commit = ">=2.6"
pytest = ">=7.1.2"
mypy = ">=1.1.1"

[tool.ruff]
fix = true
line-length = 100
extend-select = ["W605", "N"]

[tool.ruff.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.isort]
force-single-line = true
lines-between-types = 1
lines-after-imports = 2
known-first-party = ["poetry_plugin_bundle"]
required-imports = ["from __future__ import annotations"]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/protontypes/AwesomeCure/issues"

[tool.poetry.plugins."poetry.application.plugin"]
open-sustain-tech = "open_sustain_tech.plugin:OSSOptionPlugin"

[tool.poetry-plugin-export]
enabled = true

[tool.open-sustain-tech]
enable = true

[tool.poetry-plugin-bundle]
enabled = true

[tool.poetry-dynamic-versioning]
enabled = true


[[tool.poetry.source]]
name = "url"
url = "https://github.com/protontypes/open-sustainable-technology"
priority = "primary"


[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[tool.black]
target-version = ["py38", "py39", "py310"]
preview = true
line-length = 100

[tool.mypy]
enable_error_code = [
    "ignore-without-code",
    "redundant-expr",
    "truthy-bool"
]
explicit_package_bases = true
files = [
    "src/open_sustain_tech",
    "tests",
]
pypy_path = "src/open_sustain_tech"
namespace_packages = true
show_error_codes = true
strict = true

[[tool.mypy.overrides]]
module = [
    'poetry.*',
    'cleo.*',
    'lark.*',
    'virtualenv.*',
    'poetry_plugin_export',
    'poetry_dynamic_versioning',
    'poetry_plugin_bundle',
    'open_sustain_tech'
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = [
    "tests"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
